# RustForge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: settings.local.json
.rustforge/: config.toml.example
.worktrees/phase1-implementation/src/storage/: state.rs
docs/: getting-started.md  ui-guide.md
docs/plans/: phase4-api-execution.md
docs/screenshots/: README.md
docs/specs/: design.md
docs/superpowers/plans/: 2026-04-21-phase1-core-foundation.md  2026-04-21-phase2-llm-agent-layer.md  2026-04-21-phase3-tool-security.md  2026-04-21-phase5-ui-layer.md
src/: error.rs  lib.rs  main.rs
src/agents/: mod.rs  registry.rs  traits.rs  types.rs
src/api/: error.rs  execution_registry.rs  mod.rs  server.rs  state.rs  websocket.rs
src/api/handlers/: executions.rs  mod.rs  workflows.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/config/: loader.rs  types.rs
src/engine/: cancellation.rs  events.rs  executor.rs  interpolation.rs  merge.rs  mod.rs  parallel.rs  parser.rs  types.rs  unified_executor.rs
src/llm/: mod.rs  ollama.rs  openai.rs  registry.rs  traits.rs  types.rs
src/memory/: mod.rs  simple.rs  traits.rs
src/security/: audit.rs  isolation.rs  mod.rs  permissions.rs
src/storage/: mod.rs  state.rs  workflow_store.rs
src/tools/: api_client.rs  clipboard.rs  filesystem.rs  mod.rs  pdf_parser.rs  registry.rs  shell.rs  traits.rs  types.rs  web_scraper.rs
tests/: integration_test.rs  permissions_integration.rs  tool_execution_integration.rs
tests/fixtures/workflows/: invalid-dependency.yaml  invalid-duplicate-ids.yaml  simple.yaml  with-dependencies.yaml
tests/integration/: workflow_execution.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/components/: AgentNode.svelte  ExecutionMonitor.svelte  Navigation.svelte  Router.svelte  Settings.svelte  Settings.test.ts  Toast.svelte  WorkflowBuilder.svelte  WorkflowBuilder.test.ts
ui/src/lib/: api.test.ts  api.ts  router.ts  stores.test.ts  stores.ts  toast.ts  types.ts  websocket.test.ts  websocket.ts
ui/src/routes/: ExecutionDetail.svelte  Executions.svelte  Home.svelte  SettingsPage.svelte  WorkflowDetail.svelte  Workflows.svelte
