[package]
name = "rustforge"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Local AI Agent Orchestrator"
license = "MIT"
repository = "https://github.com/apus3404-oss/RustForge"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Storage
redb = "2.1"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.12"
mockall = "0.13"

[[bin]]
name = "rustforge"
path = "src/main.rs"

[lib]
name = "rustforge"
path = "src/lib.rs"
